# BharatFinTrack

./: .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  readthedocs.yaml  requirements-gh-action.txt  requirements-mypy.txt  requirements.txt
.github/workflows/: linting.yml  python-package.yml  testing.yml  typing.yml
BharatFinTrack/: __init__.py  analyzer.py  cagr.py  core.py  helper.py  nps.py  nse_index.py  nse_pri.py  nse_product.py  nse_track.py  nse_tri.py  sip.py  visual.py
BharatFinTrack.egg-info/: PKG-INFO
BharatFinTrack/.ipynb_checkpoints/: nse_track-checkpoint.py
BharatFinTrack/base_data/: base_equity_index.xlsx  base_nps.xlsx
BharatFinTrack/data/: equity_indices.xlsx
docs/: BharatFinTrack.rst  changelog.rst  conf.py  data_download.rst  download.rst  functionality.rst  index.rst  installation.rst  introduction.rst  modules.rst  quickstart.rst  requirements-docs.txt  submodules.rst  userguide.rst  visualization.rst
docs/_build/doctrees/: BharatFinTrack.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  BharatFinTrack.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
tests/: test_bharatfintrack.py  test_error.py  test_nps.py  test_nse_pri.py  test_nse_product.py  test_nse_track.py  test_nse_tri.py  test_sip.py
tests/.ipynb_checkpoints/: test_nse_track-checkpoint.py
tests/sample_data/: analyzing_correction_recovery_data.xlsx  correction_recovery_cycles.xlsx  correction_recovery_cycles_data.csv
tests/sample_data/daily_data/: index_2.csv
